# BigMC

./: readme
bigmc/: .gitignore  Makefile.am  README.md
bigmc/doc/: Makefile.am
bigmc/doc/examples/: airport.bigmc  ccs.bigmc  ccs2.bigmc  clone.bigmc  dining.bigmc  dining_mutex.bigmc  dining_nil.bigmc  diverge.bigmc  diverge_prop.bigmc  foo.bigmc  foo2.bigmc  foo3.bigmc  hole.bigmc  hole2.bigmc  hospital.bigmc  link.bigmc  match.bigmc  matches.bigmc  nil.bigmc  notify.bigmc  par.bigmc  par2.bigmc  par3.bigmc  par4.bigmc  prop.bigmc  subtree.bigmc  synkTest.bigmc  terminal.bigmc  unary.bigmc  unordered_subtree.bigmc  wide.bigmc  wide2.bigmc  wide3.bigmc
bigmc/include/: bigraph.h  globals.h  graph.h  mc.h  parsenode.h  parser.h
bigmc/src/: bgparser.hpp  bgparser.ypp  bgscanner.ll  bigraph.cpp  driver.cpp  graph.cpp  main.cpp  mc.cpp  node.cpp  parsenode.cpp  parser.cpp
